--- a/css/button.css
+++ b/css/button.css
@@ -3,11 +3,11 @@
 .dos-button {
     display: inline-block;
     padding: 6px 14px;
-    background-color: #000;
-    border: 2px solid #09CE9E;
+    background-color: var(--bg-color);
+    border: 2px solid var(--main-color);
 	font-family: 'VT323', monospace ;
     font-size: 30px;
-    color: #09CE9E;
+    color: var(--main-color);
     text-align: center;
     text-transform: uppercase;
     cursor: pointer;
@@ -16,8 +16,8 @@
   }
 
 .dos-button:hover {
-    color: #FF2B5E; /* Change the text color on hover */
-    border: 2px solid #FF2B5E;
+    color: var(--sec-color); /* Change the text color on hover */
+    border: 2px solid var(--sec-color);
 }
 
 .dos-button::before {
@@ -28,7 +28,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    background: #09CE9E;
+    background: var(--main-color);
     opacity: 0.05;
     mix-blend-mode: multiply;
 }
