--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=VT323);
+:root {
+  --main-color: #09CE9E;
+  --sec-color: #FF2B5E;
+  --bg-color: black;
+}
+
 
 body {
   margin: 0;
@@ -17,7 +23,7 @@ body {
   pointer-events: none;
   z-index: 200;
   background-image: url('../img/grain.png'); /* Replace with your grain texture image */
-  opacity: 0.075; /* Adjust the opacity to control the intensity of the effect */
+  opacity: 0.055; /* Adjust the opacity to control the intensity of the effect */
 }
 
 .fullscreen-image {
@@ -29,7 +35,7 @@ body {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: black; /* Set background color to black */
+  background-color: var(--bg-color); /* Set background color to var(--bg-color) */
 
 }
 
@@ -64,7 +70,7 @@ body {
   left: 0;
   right: 0;
   text-align: center;
-  background-color: black;
+  background-color: var(--bg-color);
   color: white;
   font-size: 5vh;
   line-height: 5vh; /* Set line-height equal to element's height */
@@ -76,7 +82,7 @@ body {
   left: 0;
   right: 0;
   text-align: center;
-  background-color: black;
+  background-color: var(--bg-color);
   color: white;
   font-size: 3vh;
 }
@@ -92,13 +98,13 @@ body {
   position: fixed;
   bottom: 4vh;
   width: 100vw;
-  background-color: #000;
-  color: #09CE9E;
+  background-color: var(--bg-color);
+  color: var(--main-color);
   padding: 10px;
   text-align: center;
   z-index: 80; /* Adjust the z-index to make sure it's above other content */
   font-size: 37px;
-  border: 2px solid #09CE9E;
+  border: 2px solid var(--main-color);
   box-sizing: border-box; /* Include padding and border in width calculation */
 
 }
@@ -108,8 +114,8 @@ body {
   bottom: 0;
   height: 4vh;
   width: 100vw;
-  background-color: #000;
-  color: #09CE9E;
+  background-color: var(--bg-color);
+  color: var(--main-color);
   text-align: center;
   z-index: 80;
   display: flex;
@@ -122,13 +128,13 @@ body {
   width: 20px; /* Adjust the width as needed */
   height: 20px; /* Adjust the height as needed */
   margin-left: 20px; /* Adjust the margin between icons as needed */
-  color: #09CE9E !important;
+  color: var(--main-color) !important;
 }
 .social-icon:hover {
   width: 20px; /* Adjust the width as needed */
   height: 20px; /* Adjust the height as needed */
   margin-left: 20px; /* Adjust the margin between icons as needed */
-  color: #FF2B5E !important;
+  color: var(--sec-color) !important;
 }
 svg path{
   fill: currentcolor;
@@ -151,17 +157,17 @@ svg path{
   display: flex;
   flex-direction: column;
   padding: 4px;
-  background-color: #000;
-  border: 2px solid #09CE9E;
+  background-color: var(--bg-color);
+  border: 2px solid var(--main-color);
   font-family: 'VT323', monospace;
   font-size: 24px;
-  color: #09CE9E;
+  color: var(--main-color);
   text-align: left;
   position: relative;
-  max-height: 71.5vh;
+  max-height: 81vh;
   overflow: auto;
   /* Custom Scrollbar Styles */
-  scrollbar-color: #09CE9E #000;
+  scrollbar-color: var(--main-color) var(--bg-color);
   z-index: 1;
   touch-action: pan-y;
   margin: 0 auto;
@@ -178,11 +184,11 @@ svg path{
   flex-direction: column;
   padding: 4px;
   display: inline-block;
-  background-color: #000;
-  border: 2px solid #09CE9E;
+  background-color: var(--bg-color);
+  border: 2px solid var(--main-color);
 	font-family: 'VT323', monospace ;
   font-size: 24px;
-  color: #09CE9E;
+  color: var(--main-color);
   top: 25vh;
   width:70vw;
   left: 15vw;
@@ -191,7 +197,7 @@ svg path{
   max-height: 70vh;
   overflow: auto;
   /* Custom Scrollbar Styles */
-  scrollbar-color: #09CE9E #000; /* thumb color, track color */
+  scrollbar-color: var(--main-color) var(--bg-color); /* thumb color, track color */
   z-index: 99; /* Increase the z-index to place the content above pseudo-element */
   touch-action: pan-y; /* Enable vertical scrolling with touch interactions */
 }
@@ -211,11 +217,11 @@ svg path{
 }
 
 ::-webkit-scrollbar-track {
-  background: #000;
+  background: var(--bg-color);
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #09CE9E;
+  background: var(--main-color);
 }
 
 .copy-email {
@@ -226,7 +232,7 @@ svg path{
 .copy-email:hover,
 .copy-email:focus {
    /* Add underline on hover/focus if desired */
-  color: #FF2B5E; /* Change color on hover/focus if desired */
+  color: var(--sec-color); /* Change color on hover/focus if desired */
 }
 
 a {
@@ -238,7 +244,7 @@ a {
 a:hover,
 a:focus {
    /* Add underline on hover/focus if desired */
-  color: #FF2B5E; /* Change color on hover/focus if desired */
+  color: var(--sec-color); /* Change color on hover/focus if desired */
 }
 
 
@@ -262,7 +268,7 @@ a:focus {
 }
 
 hr {
-  background-color: #09CE9E;
+  background-color: var(--main-color);
   border: none;
   height: 2px;
 
@@ -271,10 +277,10 @@ label {
   text-transform: uppercase;
 }
 input {
-  background-color: black;
-  border-color: #09CE9E;
+  background-color: var(--bg-color);
+  border-color: var(--main-color);
   border-width: 2px !important;
-  color: #FF2B5E;
+  color: var(--sec-color);
   font-family: 'VT323', monospace ;
   font-size: 30px;
   text-transform: uppercase;
@@ -302,7 +308,7 @@ input[type="radio"] + label::before {
   display: inline-block;
   width: 15px; /* Customize the width of the circle */
   height: 15px; /* Customize the height of the circle */
-  border: 3px solid #09CE9E; /* Customize the border color of the circle */
+  border: 3px solid var(--main-color); /* Customize the border color of the circle */
   border-radius: 50%; /* Make it a circle by using border-radius */
   background-color: transparent; /* Customize the background color of the circle */
   margin-right: 10px; /* Add spacing between the circle and label text */
@@ -312,12 +318,12 @@ input[type="radio"] + label::before {
 
 /* Style the custom radio button when it's selected */
 input[type="radio"]:checked + label::before {
-  background-color: #FF2B5E; /* Change the background color when selected */
+  background-color: var(--sec-color); /* Change the background color when selected */
 }
 
 input[type="radio"]:checked + label {
   font-weight: bold; /* Change the font weight when selected */
-  color: #FF2B5E !important;
+  color: var(--sec-color) !important;
 }
 
 
@@ -328,5 +334,5 @@ input[type="radio"]:disabled + label {
 
 input:focus { 
   outline: none !important;
-  border-color: #FF2B5E;
+  border-color: var(--sec-color);
 }
