--- a/css/shop.css
+++ b/css/shop.css
@@ -3,15 +3,29 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 4px;
-  }
-  .product {
+}
+.product {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     text-align: center;
     width: calc(100vw / 5); /* Initially show 3 products per row */
     padding: 10px;
     border: 1px solid var(--sec-color);
     margin: 8px;
-  }
-  img {
+}
+img {
     max-width: 100%;
     height: auto;
-  }
+}
+
+.product-text-container {
+    flex: 1; /* Grow to fill the available space */
+    
+}
+
+.plus-minus-container {
+    margin-top: 5px !important; /* Adjust the margin as needed */
+    
+}
