--- a/css/styles.css
+++ b/css/styles.css
@@ -217,28 +217,47 @@ svg path{
     max-height: 75vh !important;
   }
 }
-
+.alert-content {
+  overflow-y: auto;
+}
 .alert {
   display: flex;
   flex-direction: column;
+  justify-content: center; /* Vertically center content */
+  align-items: center; /* Horizontally center content */
   padding: 4px;
-  display: inline-block;
   background-color: var(--bg-color);
   border: 2px solid var(--main-color);
-	font-family: 'VT323', monospace ;
+  font-family: 'VT323', monospace;
   font-size: 24px;
   color: var(--main-color);
-  top: 25vh;
-  width:70vw;
-  left: 15vw;
-  text-align: center;
-  position: absolute;
-  max-height: 70vh;
+  position: fixed; /* Use fixed positioning for consistent placement */
+  top: 50%; /* Place the top of the alert at the vertical center of the viewport */
+  left: 50%; /* Place the left side of the alert at the horizontal center of the viewport */
+  transform: translate(-50%, -50%); /* Adjust for the alert's width and height */
+  width: 70vw;
+  max-height: 90vh; /* Limit the height to 80% of the viewport height */
   overflow: auto;
+  text-align: center;
   /* Custom Scrollbar Styles */
   scrollbar-color: var(--main-color) var(--bg-color); /* thumb color, track color */
-  z-index: 99; /* Increase the z-index to place the content above pseudo-element */
+  z-index: 99; /* Increase the z-index to place the content above other elements */
   touch-action: pan-y; /* Enable vertical scrolling with touch interactions */
+}
+
+.overlay-alert {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 98; /* Ensure the overlay is below the alert but above other content */
+  display: none; /* Initially hidden */
+  background-color: black;
+  background-image: url('../img/grain.png'); /* Replace with your grain texture image */
+  opacity: 0.35; /* Adjust the opacity to control the intensity of the effect */
+  filter: blur(40px);
+  -webkit-filter: blur(40px);
 }
 
 .hidden {
@@ -391,4 +410,8 @@ input:focus {
   display: flex;
   flex-direction: column;
   align-items: left;
+}
+
+.timeTable {
+  align-items: center;
 }
