vorkasse, bestellübersicht email, setorderpayed function to manually, set payed status, generate and send invoice and tickets

--- a/css/button.css
+++ b/css/button.css
@@ -72,3 +72,18 @@
     justify-content: center;
 
 }
+
+
+
+.main-slider-btn {
+    top: 40%;
+    position: fixed !important;
+}
+
+#main-slider-prev-button {
+    left: 0;
+}
+
+#main-slider-next-button {
+    right: 0 !important;
+}
