shop tickets update, lineup date building update

--- a/css/styles.css
+++ b/css/styles.css
@@ -253,8 +253,10 @@ svg path{
 }
 .alert-content {
   overflow-y: auto;
+  /* padding: 10px; */
 }
 .alert {
+
   display: flex;
   flex-direction: column;
   justify-content: center; /* Vertically center content */
