--- a/css/styles.css
+++ b/css/styles.css
@@ -232,8 +232,9 @@ svg path{
   max-height: 81vh;
   overflow: auto;
   margin: 0 auto;
-  z-index: 1;
-  position: inherit;
+  z-index: 101;
+  position: relative;
+  margin-top: 5vh;
 }
 
 .content-window {
